Fix dateSold field

--- a/public/index.html
+++ b/public/index.html
@@ -288,7 +288,7 @@
         // Get latest sale date
         const latestSaleDate =
           item.salesHistory && item.salesHistory.length > 0
-            ? item.salesHistory[item.salesHistory.length - 1].dateSold
+            ? item.salesHistory[item.salesHistory.length - 1].date
             : null;
 
         return (
