--- a/public/index.html
+++ b/public/index.html
@@ -731,20 +731,63 @@ function App() {
   if (loading) return <div className="loading-message">Loading inventory...</div>;
   if (error) return <div className="error-message"><h2>Error: {error}</h2></div>;
 
+// ---------- Helper: getLatestSaleDate ----------
+// Put this above your App component (or inside App before using it)
+function getLatestSaleDate(item) {
+  if (!item) return null;
+
+  // Prefer salesHistory last entry, support both "date" and "dateSold" keys
+  if (Array.isArray(item.salesHistory) && item.salesHistory.length > 0) {
+    const last = item.salesHistory[item.salesHistory.length - 1];
+    const raw = last?.date ?? last?.dateSold ?? item.dateSold ?? null;
+    if (raw == null) return null;
+    // numeric timestamp
+    if (typeof raw === 'number') {
+      const dnum = new Date(raw);
+      return isNaN(dnum.getTime()) ? null : dnum;
+    }
+    // If already a Date object
+    if (raw instanceof Date) {
+      return isNaN(raw.getTime()) ? null : raw;
+    }
+    // parse string
+    const parsed = new Date(raw);
+    return isNaN(parsed.getTime()) ? null : parsed;
+  }
+
+  // fallback to item.dateSold if present
+  if (item.dateSold != null) {
+    if (typeof item.dateSold === 'number') {
+      const dnum = new Date(item.dateSold);
+      return isNaN(dnum.getTime()) ? null : dnum;
+    }
+    if (item.dateSold instanceof Date) {
+      return isNaN(item.dateSold.getTime()) ? null : item.dateSold;
+    }
+    const parsed = new Date(item.dateSold);
+    return isNaN(parsed.getTime()) ? null : parsed;
+  }
+
+  return null;
+}
+
+
   // Filter and sort items
   const filteredItems = items.filter(item => {
     const matchesPlatform = platformFilter === 'All' || item.platform === platformFilter;
     const matchesBrand = brandFilter === 'All' || item.brand === brandFilter;
     return matchesPlatform && matchesBrand;
   }).sort((a, b) => {
+// ---------- Use this where you compute filteredItems.sort(...) ----------
   const [field, direction] = sortBy.split('-');
   let valueA, valueB;
+
   if (field === 'name') {
-    valueA = a.name.toLowerCase();
-    valueB = b.name.toLowerCase();
+    valueA = (a.name || '').toString().toLowerCase();
+    valueB = (b.name || '').toString().toLowerCase();
   } else if (field === 'profit') {
-    valueA = a.totalProfit;
-    valueB = b.totalProfit;
+    valueA = typeof a.totalProfit === 'number' ? a.totalProfit : 0;
+    valueB = typeof b.totalProfit === 'number' ? b.totalProfit : 0;
   } else if (field === 'dateSold') {
     const dateA = getLatestSaleDate(a);
     const dateB = getLatestSaleDate(b);
@@ -755,12 +798,11 @@ function App() {
     valueB = b[field];
   }
 
+  // final compare
   if (valueA < valueB) return direction === 'asc' ? -1 : 1;
   if (valueA > valueB) return direction === 'asc' ? 1 : -1;
   return 0;
-    if (valueA < valueB) return direction === 'asc' ? -1 : 1;
-    if (valueA > valueB) return direction === 'asc' ? 1 : -1;
-    return 0;
+
   });
 
   const totalProfit = filteredItems.reduce((sum, item) => sum + (typeof item.totalProfit === 'number' ? item.totalProfit : 0), 0);
